compiler/fir/analysis-tests/testData/resolve/contextParameters/diagnostics/contextParameterSyntaxWithoutLanguageFeature.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ContextReceivers

context(<!UNSUPPORTED_FEATURE!>s: String<!>)
fun foo() {}